--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
                 <p id="registeredTime">Leggetid registrert: 22:00</p>
                 <div class="select-div">
                     <select name="types" id="types">
-                        <option value="2115">Står opp tidlig skole (21:15)</option>
-                        <option value="2200">Står opp sent skole (22:00)</option>
+                        <option value="2115">Tidlig skole (21:15)</option>
+                        <option value="2200">Sen skole (22:00)</option>
+                        <option value="2215">Tidlig skole🩸 (22:15)</option>
+                        <option value="2300">Sen skole🩸 (23:00)</option>
                         <option value="off">Det er fri! (∞:∞)</option>
                     </select>
                 </div>
