--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <div class="info-div">
             <div class="thisNightInfo">
                 <p>Neste natt begynner 12:00</p>
-                <p id="date">Dato: 14.11.24</p>
-                <p id="registeredTime">Leggetid registrert: 22:00</p>
+                <p id="date">N/A</p>
+                <p id="registeredTime">N/A </p>
                 <div class="select-div">
                     <select name="types" id="types">
                         <option value="2115">Tidlig skole (21:15)</option>
@@ -30,9 +30,9 @@
             <div class="statistics-div">
                 <h4>Suksessrate</h4>
                 <p>All time:</p>
-                <p id="lifetime-stat"></p>
+                <p id="lifetime-stat">N/A%</p>
                 <p>Siste 30 dager:</p>
-                <p id="month-stat"></p>
+                <p id="month-stat">N/A%</p>
             </div>
         </div>
 
